--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
