--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
