--- a/package.json
+++ b/package.json
@@ -52,13 +52,18 @@
     "react-test-renderer": "^18.2.0"
   },
   "jest": {
-    "testEnvironment": "jsdom"
-    "jest": "^28.1.3"
-  },
-  "jest": {
+    "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
       "\\.(css|less)$": "<rootDir>/mocks/fileMock.js"
     }
   }
 }
+
+
+
+
+
+
+
+
