--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "enzyme": "^3.11.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.1",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "svg-url-loader": "^7.1.1"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -59,11 +60,3 @@
     }
   }
 }
-
-
-
-
-
-
-
-
