--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
+    "dragm": "^0.0.5",
     "express": "^4.18.1",
     "file-loader": "^6.2.0",
     "jest-dom": "^4.0.0",
