--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.27.2",
     "babel-jest": "^29.0.0",
     "babel-loader": "^8.2.5",
+    "cloudinary-react": "^1.8.1",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "dragm": "^0.0.5",
