--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "file-loader": "^6.2.0",
     "jest-dom": "^4.0.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
