--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "overview-test": "jest overview.test.js",
     "client-dev": "npx webpack --watch",
     "server-dev": "npx nodemon --watch server server/index.js",
-    "build": "npx webpack"
+    "build": "npx webpack & npx nodemon server server/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.1",
     "dragm": "^0.0.5",
     "express": "^4.18.1",
+    "express-static-gzip": "^2.1.7",
     "file-loader": "^6.2.0",
     "jest-dom": "^4.0.0",
     "moment": "^2.29.4",
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "babel-jest": "^29.0.1",
+    "compression-webpack-plugin": "^10.0.0",
     "enzyme": "^3.11.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.1",
